- refs #1866 - fixed sfv hash check if sfv file is available but a link of the package is not in the hash list - extended SrcParser from LFE for descriptions of PluginOptionals - removed old variables from DownloadLink (like lastCaptchaFile, speedLimit, mirror)
git-svn-id: svn://svn.jdownloader.org/jdownloader/trunk@11608 ebf7c1c2-ba36-0410-9fe8-c592906822b4